k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels: { app: backend }
  template:
    metadata:
      labels: { app: backend }
    spec:
      containers:
        - name: backend
          image: docker.io/bhadrakorukonda/devops-backend:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet: { path: /api/ping, port: 8080 }
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: /api/ping, port: 8080 }
            initialDelaySeconds: 10
            periodSeconds: 10
