k8s/pg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: devops
spec:
  selector: { app: postgres }
  ports:
    - port: 5432
      targetPort: 5432
