k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: devops
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # All /api... goes to backend service (no rewrite needed)
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5000
      # Everything else goes to frontend
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
